--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-source-filesystem": "^5.2.0",
     "gatsby-transformer-sharp": "^5.2.0",
     "react": "^18.2.0",
+    "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-responsive-carousel": "^3.2.23"
